--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <body>
     <h1>Welcome to Osiris's Portfolio</h1>
     <p>Check out my projects:</p>
-    <a href="cyberpunk-terminal/">Cyberpunk Terminal</a>
+    <a href="/cyberpunk-terminal/">Cyberpunk Terminal</a>
 </body>
 </html>
