Convert portfolio to styled HTML

--- a/index.html
+++ b/index.html
@@ -1,17 +1,124 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Osiris's Portfolio</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; background: black; color: cyan; }
-        a { color: lime; font-size: 20px; text-decoration: none; }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Osiris Ortiz – Portfolio</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      background-color: #f8f9fa;
+      color: #212529;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+    header, section {
+      max-width: 800px;
+      margin: auto;
+      padding: 2rem;
+    }
+    header {
+      background-color: #ffffff;
+      border-bottom: 1px solid #dee2e6;
+    }
+    h1, h2, h3 {
+      color: #343a40;
+    }
+    a {
+      color: #007bff;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    ul {
+      padding-left: 1.2rem;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      color: #6c757d;
+    }
+  </style>
 </head>
 <body>
-    <h1>Welcome to Osiris's Portfolio</h1>
-    <p>Check out my projects:</p>
-    <a href="/cyberpunk-terminal/">Cyberpunk Terminal</a>
+  <header>
+    <h1>Osiris Ortiz</h1>
+    <p><strong>IT Support Technician | Developer | Homelab Enthusiast</strong></p>
+    <p>📧 osirisortizpc@gmail.com | 📞 216-403-8884</p>
+    <p><a href="https://github.com/osirisortiz">GitHub</a> | <a href="#">LinkedIn</a></p>
+  </header>
+
+  <section>
+    <h2>👋 About Me</h2>
+    <p>I'm a hands-on IT professional with a passion for automation, media servers, and open-source solutions. I work as an IT Help Desk Level 2 technician and manage complex systems involving Proxmox, Docker, and ZFS. I love solving problems, creating custom tools for internal use, and building tech that helps people — like my Raspberry Pi-based offline theater kit.</p>
+    <p>Currently pursuing the Linux+ certification and looking for opportunities where I can contribute ideas, not just tickets.</p>
+  </section>
+
+  <section>
+    <h2>📄 Resume</h2>
+    <ul>
+      <li><strong>Current Role:</strong> IT Help Desk Level 2 – Mac & Windows deployment, security, firewalls</li>
+      <li><strong>Education:</strong> B.S. Computer Software Development — University of Phoenix</li>
+      <li><strong>Certs:</strong> CompTIA Linux+ (in progress)</li>
+      <li><strong><a href="#">Download Resume PDF</a></strong></li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>🔧 Projects</h2>
+    <h3>🎬 Pocket Theater Kit</h3>
+    <ul>
+      <li>Raspberry Pi-powered offline media server with Jellyfin</li>
+      <li>Custom Twin Peaks theme, preroll trailers, touch-friendly UI</li>
+    </ul>
+
+    <h3>🖥️ Proxmox HA Cluster</h3>
+    <ul>
+      <li>Three-node cluster with ZFS replication and PBS backups</li>
+      <li>Docker stack with Radarr, Sonarr, Jellyfin, and more</li>
+    </ul>
+
+    <h3>📲 Internal Field Reporting App</h3>
+    <ul>
+      <li>iOS-based and PowerPoint versions for field incident tracking</li>
+    </ul>
+
+    <h3>📋 Employee Evaluation Tool</h3>
+    <ul>
+      <li>Created printable review forms using PowerPoint</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>🧾 Technical Docs & Writing</h2>
+    <ul>
+      <li><a href="#">rarr-stack GitHub Repo</a> – Docker config for Radarr/Sonarr stack</li>
+      <li><a href="#">maas360-docs</a> – Enrollment guides, QR config, training steps</li>
+      <li>Internal SOPs, audit templates, and onboarding checklists</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>🛠️ Skills</h2>
+    <ul>
+      <li><strong>Infrastructure:</strong> Proxmox VE, ZFS, rsync, PBS, pfSense, Fortinet</li>
+      <li><strong>Dev/Automation:</strong> Bash, Git, Docker, GitHub Actions, Python (beginner)</li>
+      <li><strong>Support & MDM:</strong> Azure AD, Intune, Jamf, MaaS360, iPhone/laptop deployment</li>
+      <li><strong>Media:</strong> Jellyfin, Radarr, Sonarr, qBittorrent, Gluetun, Home Assistant</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>📫 Contact</h2>
+    <p><strong>Email:</strong> osirisortizpc@gmail.com</p>
+    <p><strong>Phone:</strong> 216-403-8884</p>
+  </section>
+
+  <footer>
+    <p>“I don't just fix problems — I build systems that prevent them.”</p>
+  </footer>
 </body>
 </html>
